frontend functionality for core game in the works
